--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "default": "Server=(localdb)\\MSSQLLocalDB;Database=EksamensopgaveS2_Db;Trusted_Connection=True;"
+  },
+  "WeatherApi": {
+    "ApiKey": "93ac073d900fd4a5520fae8f9189026a",
+    "BaseUrl": "https://api.openweathermap.org/data/2.5/"
   }
 }
